--- a/exam-final/src/main/resources/templates/index.html
+++ b/exam-final/src/main/resources/templates/index.html
@@ -1,10 +1,80 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
+<title>SERVICIO DE TRANSPORTES</title> 
+<link rel="stylesheet" data-th-href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="/css/estilos.css">
+</head>
+
+<body>
+	<div class="container">
+		
+		<header class="container-fluid  justify-content-center">
+			<p id="color" class="text-lisht mb-0 p-4 fs-6"></p>
+			<div data-th-replace="~{fragments/headear::navbar}">
+			</div>	
+		</header>
+		
+		<div data-th-replace="~{fragments/headear::carrusel}">
+		</div>
+		<br><br>
+
+		 <!-- AGREGAR CART DE LOS CONDUCTORES -->
+		 
+		<div data-th-replace="~{fragments/body::reserva}" class="center">
+		</div>
+		
+		<br><br><br> 
+		
+		<!-- class=" w-100 d-flex align-items justify-content-center flex-wrap" -->
+		<footer class="pie-pagina">
+		<div class="grupo-1">
+		 	<div class="box">
+				<h6 class="">****************</h6>
+				<br>
+				<h6>San Salvador de Jujuy- Jujuy - Argentina</h6>
+				<br>
+				<h6>Correo etronico:</h6>
+				<a class="a1">******@************</a>
+				<hr class="border border-danger border-2 opacity-50">
+		 	</div>
+			<div class="box">
+		 		<h2>Enlaces de Interes</h2>
+		 		<ul>
+		 		<li>Telefonos</li>
+		 		<li>Modelos</li>
+		 		<li>******</li>
+		 		<li>******</li>
+		 		<li>Protocolos de Bioseguridad</li>
+		 		<li>******</li>
+		 		<li>******</li>
+		 		</ul>
+		 		
+		 	</div>
+		 	<div class="box">
+		 		<h2 class="fs-5 px-3 pt-3">Redes Sociales</h2>
+				<br>
+				<div id="iconos">
+					<a class="a1" ><i class="bi bi-youtube"></i></a>
+					<a class="a1" ><i class="bi bi-facebook"></i></a>
+					<a class="a1" ><i class="bi bi-instagram"></i></a>
+				</div>
+		 	</div>
+		</div>
+		<div class="grupo-2">
+			<small>&copy; 2025 <b>Servicio de transporte</b> - Todos los derechos reservados.</small>
+		</div>
+		
+		</footer>
+		
+	
+	<script data-th-src="@{/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js}"></script>
+	  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
 </body>
+
 </html>
