--- a/exam-final/src/main/resources/templates/fragments/body.html
+++ b/exam-final/src/main/resources/templates/fragments/body.html
@@ -22,9 +22,9 @@
   <label for="codigo" class="form-label">Tipo de viaje</label>
     <select class="form-select" aria-label="Default select example">
 		  <option selected></option>
-		  <option value="1">Corta distancia</option>
-		  <option value="2">Media distancia</option>
-		  <option value="3">Larga distancia</option>
+		  <option value="1">corta</option>
+		  <option value="2">media</option>
+		  <option value="3">larga</option>
 		</select>
   </div>
   
