Conductor controller y form

--- a/exam-final/src/main/resources/templates/index.html
+++ b/exam-final/src/main/resources/templates/index.html
@@ -22,7 +22,8 @@
 		
 		<div data-th-replace="~{fragments/headear::carrusel}">
 		</div>
-		<br><br></div>
+		<br><br>
+		</div>
 
 		 <!-- AGREGAR CART DE LOS CONDUCTORES -->
 	<div class="container mt-5">
@@ -43,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <!-- Agegar nuevo conductor -->
+      
     </div>
     
 		 
