--- a/exam-final/src/main/resources/templates/formConductor.html
+++ b/exam-final/src/main/resources/templates/formConductor.html
@@ -1,29 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Insert title here</title>
+<link rel="stylesheet" data-th-href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="/css/estilos.css">
 </head>
 <body>
+
+<div>
+	<header class="container-fluid  justify-content-center">
+			<p id="color" class="text-lisht mb-0 p-4 fs-6"></p>
+			<div data-th-replace="~{fragments/headear::navbar}">
+			</div>	
+	</header>
+</div>
+<br><br>
 <div data-th-fragment="reserva" class="container" align="center"> 
-<form>
+<form data-th-object="${nuevoConductor}" data-th-action="${band}?@{/guardarConductor}" method="post">
 	<label for="codigo" class="form-label">REGISTRAR CONDUCTOR</label><br>
   <br>
   <div class="col-sm-6">
     <label for="codigo" class="form-label">Codigo:</label>
-    <input type="text" class="form-control" id="codigo"  required>
+    <input type="text" class="form-control" id="codigo">
   </div><br>
   <div class="col-sm-6">
     <label for="nombre" class="form-label">Nombre:</label>
-    <input type="text" class="form-control" id="nombre"  required>
+    <input type="text" class="form-control" id="nombre" required>
   </div><br>
    <div class="col-sm-6">
     <label for="apellido" class="form-label">Apellido:</label>
-    <input type="text" class="form-control" id="apellido"  required>
+    <input type="text" class="form-control" id="apellido" required>
   </div><br>
   <div class="col-sm-6">
     <label for="nacimiento" class="form-label">Fecha de nacimiento:</label>
-    <input type="date" class="form-control" id="nacimiento"  required>
+    <input type="date" class="form-control" id="nacimiento" required>
   </div><br>
    <div class="col-sm-6">
     <label for="automovil" class="form-label">Automovil:</label>
@@ -43,5 +58,7 @@
   <button type="submit" class="btn btn-primary">Guardar</button>
 </form>
 </div>
+<br><br>
+<script data-th-src="@{/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js}"></script>
 </body>
 </html>
