--- a/exam-final/src/main/resources/templates/index.html
+++ b/exam-final/src/main/resources/templates/index.html
@@ -29,23 +29,22 @@
 	<div class="container mt-5">
         <h1>Conductores Disponibles</h1>
         <div class="row">
-        	
-            <!-- Aquí se generarán las tarjetas de los conductores -->
-            <div class="col-md-4">	
-                <div class="card mb-4">
-                    <div class="card-body">
-                    	<h5 class="card-title">Codigo</h5>
-						<p class="card-text">Nombre</p>
-						<p class="card-text">Apellido</p>
-                        <p class="card-text">Edad</p>
-                        <p class="card-text">Automóvil</p>
-                        <p class="card-text">Tipo de Automóvil</p>
-					</div>
-                </div>
-            </div>
-        </div>
-      
-    </div>
+        <div class="col-md-4">
+        <div class="card mb-4" style="width: 18rem;" data-th-each="conductor : ${listadoConductores}">
+	  	<div class="card-body">
+			<h5 class="card-title" data-th-text="${conductor.id}"></h5>
+			<p>Nombre</p><p class="card-text" data-th-text="${conductor.nombre}"></p>
+			<p>Apellido</p><p class="card-text" data-th-text="${conductor.apellido}"></p>
+			<p>Años</p><p class="card-text" data-th-text="${conductor.fechaNac}"></p>
+			<p>Años</p><p class="card-text" data-th-text="${conductor.automovil}"></p>
+			<p>Años</p><p class="card-text" data-th-text="${conductor.tipoAutomovil}"></p>
+			<a  class="btn btn-danger">Borrar</a>					
+			<a  class="btn btn-warning" >Modificar</a>
+		</div>	
+           </div>
+           </div>
+           </div>
+	</div>
     
 		 
  		<!-- FORMULARIO DE VIAJE  -->
