--- a/exam-final/src/main/resources/templates/formConductor.html
+++ b/exam-final/src/main/resources/templates/formConductor.html
@@ -50,13 +50,13 @@
   </div><br>	
   		
   <div class="col-sm-6">
- <!--  <label for="tipoAuto" class="form-label">Tipo de automovil:</label>
+  <label for="tipoAuto" class="form-label">Tipo de automovil:</label>
     <select id="tipoAuto" data-th-field="*{tipoAutomovil}" class="form-select" aria-label="Default select example">
     	 <option value="1"></option>
 		  <option value="X">X</option>
 		  <option value="Luxe">Luxe</option>
 		  <option value="Premium">Premium</option>
-		</select> -->
+		</select> 
   </div>
   
   <br>
