--- a/exam-final/src/main/resources/templates/index.html
+++ b/exam-final/src/main/resources/templates/index.html
@@ -36,6 +36,7 @@
 			<p class="card-text" data-th-text="${conductor.apellido}"></p>
 			<p class="card-text" data-th-text="${conductor.fechaNac}"></p>
 			<p class="card-text" data-th-text="${conductor.automovil}"></p>
+			<p class="card-text" data-th-text="${conductor.tipoAutomovil}"></p>
 			
 			<a  data-th-href="@{'/eliminarConductor/'+${conductor.codigo}}" class="btn btn-danger">Borrar</a>					
 			<a  class="btn btn-warning" >Modificar</a>
