--- a/exam-final/src/main/resources/templates/fragments/headear.html
+++ b/exam-final/src/main/resources/templates/fragments/headear.html
@@ -31,7 +31,7 @@
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/lis">ListaConductores</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/for">ListaViajes</a></li>
+            <li><a class="dropdown-item" href="/formularioViajes">ReservasdeViajes</a></li>
           </ul>
         </li>
         <li class="nav-item">
