modificaciones, y toda relacion a reserva de viaje

--- a/exam-final/src/main/resources/templates/index.html
+++ b/exam-final/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" >
 <head>
 <meta charset="UTF-8">
 
@@ -45,11 +45,12 @@
            
            </div>
 	</div>
-    
-		 
- 		<!-- FORMULARIO DE VIAJE  -->
-		<div data-th-replace="~{fragments/body::reserva}" class="center">
-		</div>
+	
+		<div class="container" align="center">
+		<br><br>
+		 <a  class="btn btn-primary" href="/formularioViajes">Iniciar Reserva de viaje</a>
+ 		</div>
+    	
 		
 		<br><br><br> 
 		
