--- a/exam-final/src/main/resources/templates/fragments/headear.html
+++ b/exam-final/src/main/resources/templates/fragments/headear.html
@@ -29,7 +29,7 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/formularioConductor">Ingresar nuevo conductor</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/lis">ListaConductores</a></li>
+            <li><a class="dropdown-item" href="/principal/index">ListaConductores</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/formularioViajes">ReservasdeViajes</a></li>
           </ul>
