--- a/exam-final/src/main/resources/templates/fragments/headear.html
+++ b/exam-final/src/main/resources/templates/fragments/headear.html
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/principal/index">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="/index">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Imagenes</a>
@@ -29,7 +29,7 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/formularioConductor">Ingresar nuevo conductor</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/principal/index">ListaConductores</a></li>
+            <li><a class="dropdown-item" href="/index">ListaConductores</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/formularioViajes">ReservasdeViajes</a></li>
           </ul>
